chore: avoid top-of-hour schedule and prevent overlap

--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -2,8 +2,12 @@ name: Ingest News to Notion
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '7,37 * * * *'
   workflow_dispatch:
+
+concurrency:
+  group: ingest-news-to-notion
+  cancel-in-progress: true
 
 jobs:
   ingest:
